@@ -1,13 +1,10 @@
 package com.example.dicomproject.security;
 
 
-import com.example.dicomproject.Auth.JwtAuthFilter;
-import com.example.dicomproject.Auth.JwtService;
-import com.example.dicomproject.Auth.TokenStore;
-import com.example.dicomproject.userrepo.repository.UserRepository;
-import lombok.RequiredArgsConstructor;
-import lombok.Value;
-import org.springframework.boot.context.properties.EnableConfigurationProperties;
+import com.example.dicomproject.auth.JwtAuthFilter;
+import com.example.dicomproject.auth.JwtService;
+import com.example.dicomproject.auth.TokenStore;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -16,23 +13,18 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
 import java.util.Arrays;
 import java.util.List;
-
 
 @Configuration
 @EnableMethodSecurity
 public class SecurityConfig {
-
 
     private static final String[] SWAGGER_WHITELIST = {
             "/v3/api-docs/**",
@@ -40,52 +32,65 @@ public class SecurityConfig {
             "/swagger-ui.html"
     };
 
-
-    /** JwtAuthFilter는 @Bean으로 생성 (컴포넌트 아님) */
+    /** JwtAuthFilter는 @Bean으로 생성 */
     @Bean
     public JwtAuthFilter jwtAuthFilter(
             JwtService jwtService,
             UserDetailsService userDetailsService,
-            TokenStore tokenStore                    // ✅ 주입
+            TokenStore tokenStore
     ) {
         return new JwtAuthFilter(jwtService, userDetailsService, tokenStore);
     }
 
-    /** CORS 설정도 @Bean 분리 */
+
     @Bean
-    public CorsConfigurationSource corsConfigurationSource(
-            // 환경값을 문자열로 받고 split (배열 @Value 문제 회피)
-            @org.springframework.beans.factory.annotation.Value("${cors.allowed-origins:http://localhost:3000}")
-            String allowedOriginsRaw
-    ) {
-        var cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(Arrays.asList(allowedOriginsRaw.split(",")));
-        cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration cfg = new CorsConfiguration();
+
+        // 프론트 오리진만 명시 (여러 개면 콤마 추가)
+        cfg.setAllowedOriginPatterns(List.of("http://localhost:3000", "http://127.0.0.1:3000"));
+
+        cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
         cfg.setAllowedHeaders(List.of("*"));
+
+        // 브라우저에서 읽게 할 응답 헤더(필요시)
+        cfg.setExposedHeaders(List.of("Authorization","Location","Content-Disposition"));
+
+        // Authorization 헤더만 쓸 거면 false 권장
         cfg.setAllowCredentials(true);
-        var source = new UrlBasedCorsConfigurationSource();
+
+        cfg.setMaxAge(3600L);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", cfg);
         return source;
     }
 
-    /** 핵심: 필요한 빈을 메서드 파라미터로 주입 */
+    /** 보안 체인 */
     @Bean
     public SecurityFilterChain securityFilterChain(
             HttpSecurity http,
-            JwtAuthFilter jwtAuthFilter,
-            CorsConfigurationSource corsConfigurationSource
+            CorsConfigurationSource corsConfigurationSource,
+            JwtAuthFilter jwtAuthFilter
     ) throws Exception {
         http
-                .csrf(csrf -> csrf.disable())
+          .csrf(csrf -> csrf.disable())
+                .cors(c -> c.configurationSource(corsConfigurationSource))
                 .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/dicom/instances/**","/api/dicom/studies/**").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(SWAGGER_WHITELIST).permitAll()
-                        .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/dicom/**").authenticated()
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
-                .cors(c -> c.configurationSource(corsConfigurationSource));
+                .exceptionHandling(ex -> ex.authenticationEntryPoint((req, res, e) -> {
+                    res.setStatus(401);
+                    res.setHeader("WWW-Authenticate", "Bearer error=\"unauthorized\"");
+                    res.setContentType("application/json;charset=UTF-8");
+                    res.getWriter().write("{\"error\":\"unauthorized\"}");
+                }));
 
         return http.build();
     }
@@ -94,6 +99,4 @@ public class SecurityConfig {
     public AuthenticationManager authenticationManager(AuthenticationConfiguration cfg) throws Exception {
         return cfg.getAuthenticationManager();
     }
-
-
 }
